# HERKUSNEEZE

./: .gitignore  Atlas.py  AuditMe.py  AuditMeParas.py  README.md  default.ini  main.py  main.spec  parseMe.py  pyproject.toml  shuffleMe.py
Language Tables/: combinedTable.json  deeplTable.json  googleTable.json
src/atlas6/: Atlas.py  default.ini  defaultconfig.json  main.py  sentenceSegmentation.py
src/atlas6/Converted Texts/: DownInBaskervilles.json  Kongres futurologiczny.json  LingoStaging.json  [Chinese].json  [Japanese].json  [Spanish]Salvando La Tradición.json
src/atlas6/Language Tables/: combinedTable.json  googleTable.json
src/atlas6/Output/: Saved Cards - Total.txt
src/atlas6/Sample Texts/: [Japanese].txt  [Spanish]Salvando La Tradición.txt
src/atlas6/Segmentation Models/catalan/: LICENSES_SOURCES  README.md  accuracy.json  config.cfg  meta.json
src/atlas6/Segmentation Models/chinese/: README.md  accuracy.json  meta.json
src/atlas6/Segmentation Models/croatian/: LICENSES_SOURCES  README.md  accuracy.json  config.cfg  meta.json
src/atlas6/Segmentation Models/danish/: LICENSES_SOURCES  README.md  accuracy.json  config.cfg  meta.json
src/atlas6/Segmentation Models/dutch/: LICENSES_SOURCES  README.md  accuracy.json  config.cfg  meta.json
src/atlas6/Segmentation Models/finnish/: LICENSES_SOURCES  README.md  accuracy.json  meta.json
src/atlas6/Segmentation Models/greek/: LICENSES_SOURCES  README.md  accuracy.json  config.cfg  meta.json
src/atlas6/Segmentation Models/korean/: LICENSES_SOURCES  README.md  accuracy.json  config.cfg  meta.json
(+97 files in other folders)
